# safetyhook

./: .gitignore  CMakeLists.txt  README.md  amalgamate.py  cmake.toml  format.ps1  vcpkg.json
.githooks/: pre-commit
.github/workflows/: build.yml
cmake/: safetyhook-config.cmake.in
cmake/amalgamation/: CMakeLists.txt
docs/: CMakeLists.txt  Doxyfile.in
example/: CMakeLists.txt  midhook.cpp  minimal.cpp  module.cpp  multiple.cpp  threadsafe.cpp  vmthook.cpp
include/: SafetyHook.hpp  SafetyHookFactory.hpp  ThreadFreezer.hpp  safetyhook.hpp
include/safetyhook/: Builder.hpp  Factory.hpp  Hook.hpp  InlineHook.hpp  MidHook.hpp  ThreadFreezer.hpp  allocator.hpp  common.hpp  context.hpp  easy.hpp  inline_hook.hpp  mid_hook.hpp  os.hpp  thread_freezer.hpp  utility.hpp  vmt_hook.hpp
module/: CMakeLists.txt  safetyhook.cppm
src/: Builder.cpp  CMakeLists.txt  Factory.cpp  Hook.cpp  InlineHook.cpp  MidHook.cpp  MidHook.x64.asm  SafetyHook.cpp  SafetyHookFactory.cpp  ThreadFreezer.cpp  allocator.cpp  context.cpp  easy.cpp  inline_hook.cpp  mid_hook.cpp  mid_hook.x86.asm  mid_hook.x86_32.asm  mid_hook.x86_64-linux.asm  mid_hook.x86_64-windows.asm  mid_hook.x86_64.asm  os.linux.cpp  os.windows.cpp  thread_freezer.cpp  utility.cpp  vmt_hook.cpp
test/: CMakeLists.txt  allocator.cpp  inline_hook.cpp  inline_hook.x86_64.cpp  main.cpp  mid_hook.cpp  vmt_hook.cpp  vmt_targets.cpp  vmt_targets.hpp
tests/: test0.cpp  test1.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp
unittest/: allocator.cpp  inline_hook.cpp  inline_hook.x86_64.cpp  mid_hook.cpp  vmt_hook.cpp
